# tradeboard

./: pyproject.toml
app/: settings.py
app/crud/: crud.py
app/orm/: database.py  models.py
app/schemes/: category.py  feedback.py  item.py  user.py
