[tool.poetry]
name = "tradeboard"
version = "0.1.0"
description = ""
authors = ["tangpong <braveryandburnout@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
fastapi = "^0.111.0"
asyncpg = "^0.29.0"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
